--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -93,9 +93,10 @@ h3 {
 }
 
 .goal {
-  background-color: #f4f4f4;
+  background-color: #d6d6d6;
+  border-radius: 10px;
   margin: 10px 0;
-  padding: 20px 0 10px;
+  padding: 50px 0;
   position: relative;
 }
 
@@ -111,7 +112,7 @@ h3 {
 .form,
 .content {
   width: 70%;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 .form-group {
@@ -137,9 +138,9 @@ h3 {
 
 .btn {
   padding: 10px 20px;
-  border: 1px solid #000;
+  /* border: 1px solid #000; */
   border-radius: 5px;
-  background: #000;
+  background: #1e1e1e;
   color: #fff;
   font-size: 16px;
   font-weight: 700;
